# iOSLaunchTimeOPT

./: AppDelegate.swift  HomeViewController.swift  LICENSE  LaunchTimeReporter.swift  LaunchTimeTracker.swift  README.md  main.swift
docs/01_measurement/: APM 集成说明-启动时间篇.md  启动时间测量规范.md
docs/02_analysis_tools/: Mach-O 分析脚本使用说明.md  启动性能分析报告模板.md
docs/02_analysis_tools/clang_plugin/: Clang_Plugin_Dev_Environment_Setup.md  Clang_启动性能扫描插件说明.md
docs/02_analysis_tools/swift/: Swift_Runtime_MachO_Research.md  Swift_Static_Analysis_Comparison.md  Swift_Static_Analysis_Feasibility.md
docs/02_analysis_tools/swift/swiftSyntax/: Package.swift  main.swift
docs/02_analysis_tools/swift/swiftlint/: .swiftlint.yml  CustomRules.swift
docs/03_optimization/: +load 方法治理文档.md  OrderFileInstrumentation.m  二进制重排实施指南.md  二进制重排研究与实践.md
docs/04_monitoring_guidelines/: CI CD 集成启动时间监控说明.md  LaunchPerformanceTests.swift  启动性能监控看板设计.md  开发规范-启动性能篇.md
scripts/: analyze_macho_load_methods.py  generate_order_file.py
src/clang_plugin/: CMakeLists.txt  DiagnosticRule.h  LaunchGuardPlugin.cpp  LoadMethodFileManagerRule.cpp  LoadMethodFileManagerRule.h  MainThreadSyncSDKRule.cpp  MainThreadSyncSDKRule.h
